--- a/CustomTransition/Base.lproj/Main.storyboard
+++ b/CustomTransition/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="8n6-Eg-ZUt">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="8n6-Eg-ZUt">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
@@ -46,7 +46,7 @@
                     <navigationItem key="navigationItem" title="Custom Transitions" id="pjn-rD-cf5">
                         <barButtonItem key="rightBarButtonItem" title="Options" id="Wrv-mr-lpH">
                             <connections>
-                                <segue destination="v3h-9J-igT" kind="presentation" id="krB-8R-t3E"/>
+                                <segue destination="v3h-9J-igT" kind="presentation" identifier="modalOptions" id="krB-8R-t3E"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -67,11 +67,11 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="zKX-dV-blC">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="zKX-dV-blC">
                                 <rect key="frame" x="0.0" y="60" width="600" height="540"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="vH2-Ih-cPC">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="vH2-Ih-cPC">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vH2-Ih-cPC" id="Lad-IA-Gtk">
@@ -79,6 +79,10 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="v3h-9J-igT" id="BF2-18-LuY"/>
+                                    <outlet property="delegate" destination="v3h-9J-igT" id="2Fg-M4-aBH"/>
+                                </connections>
                             </tableView>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0yZ-GU-qZJ">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
@@ -88,7 +92,11 @@
                                 </constraints>
                                 <items>
                                     <navigationItem title="Options" id="PYD-ie-bph">
-                                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="hS6-eh-bFc"/>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="hS6-eh-bFc">
+                                            <connections>
+                                                <action selector="done:" destination="v3h-9J-igT" id="YFh-4h-FO0"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                                 <variation key="default">
@@ -115,6 +123,10 @@
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="contentView" destination="HHL-Ce-tnt" id="Xpo-JQ-7jE"/>
+                        <outlet property="tableView" destination="zKX-dV-blC" id="2Ws-0K-W1F"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ygx-PZ-Ugn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
